Added pagination with a custom PostResponse